# Trading_Team

./: README.md  pyproject.toml  test_accounts.py
output/: accounts.py  accounts.py_design.md  app.py  test_accounts.py  test_trading.py  trading.py  trading.py_design.md
output/.gradio/flagged/: dataset1.csv
src/trading_team/: crew.py  main.py
src/trading_team/config/: agents.yaml  tasks.yaml
