[project]
name = "trading_team"
version = "0.1.0"
description = "Trading_Team using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.165.1,<1.0.0",
    "gradio>=5.44.1",
]

[project.scripts]
run_crew = "trading_team.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"

[tool.hatch.build.targets.wheel]
packages = ["src/trading_team"]
